<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".gui.ButtonFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.9">
            <Button
                    android:text="@string/yes_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/yes_button"
                    android:visibility="gone"
                    />
            <Space
                    android:layout_width="40dp"
                    android:layout_height="match_parent"/>
            <Button
                    android:text="@string/no_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/no_button"
                    android:visibility="gone"
                   />
        </LinearLayout>
        <Button
                android:text="@string/request_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/request_button"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>